--- a/AppBarMenu/AppBarMenu/MainWindow.xaml
+++ b/AppBarMenu/AppBarMenu/MainWindow.xaml
@@ -1,11 +1,15 @@
 ﻿<Window x:Class="AppBarMenu.MainWindow"
+        WindowStyle="None"
+        MouseDown="Grid_MouseDown"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AppBarMenu"
         mc:Ignorable="d"
-        Title="Quick Acess Menu" Height="450" Width="800"
+        Title="Quick Acess Menu"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
      TextElement.FontWeight="Regular"
@@ -13,9 +17,9 @@
      TextOptions.TextFormattingMode="Ideal"
      TextOptions.TextRenderingMode="Auto"
      Background="{DynamicResource MaterialDesignPaper}"
-     FontFamily="{DynamicResource MaterialDesignFont}">
+     FontFamily="{DynamicResource MaterialDesignFont}" Height="600" Width="650">
     <Grid>
-        <ListBox ToolTip="Arraste e solte para adcionar um novo item" x:Name="ListaDeItensBox" HorizontalAlignment="Left" Height="360" Margin="15,10,0,0" VerticalAlignment="Top" Width="355" DragEnter="ListaDeItensBox_DragEnter" DragOver="ListaDeItensBox_DragOver" Drop="ListaDeItensBox_Drop" MouseRightButtonUp="ListaDeItensBox_MouseRightButtonUp">
+        <ListBox ToolTip="Arraste e solte para adcionar um novo item" x:Name="ListaDeItensBox" HorizontalAlignment="Center" Height="307" Margin="14,10,14,0" VerticalAlignment="Top" Width="622" DragEnter="ListaDeItensBox_DragEnter" DragOver="ListaDeItensBox_DragOver" Drop="ListaDeItensBox_Drop" MouseRightButtonUp="ListaDeItensBox_MouseRightButtonUp" Foreground="Black" BorderBrush="Black" Background="#195C00FF" MouseDoubleClick="ListaDeItensBox_MouseDoubleClick">
             <ListBox.ContextMenu>
                 <ContextMenu x:Name="ContextStripListOpen">
                     <MenuItem x:Name="BtnOpenItem" Click="ItemControlOpen_Click">
@@ -51,7 +55,12 @@
                 </ContextMenu>
             </ListBox.ContextMenu>
         </ListBox>
-        <Button x:Name="BtnAdd" Content="Adicionar" HorizontalAlignment="Left" VerticalAlignment="Top" Width="164" Click="BtnAdd_Click" Margin="375,10,0,0"/>
+        <Button x:Name="BtnAdd" Content="Adicionar" VerticalAlignment="Center" Width="100" Click="BtnAdd_Click" Margin="14,377,536,183" Height="40" HorizontalAlignment="Center"/>
+        <Button x:Name="CloseBtn" Content="Sair" HorizontalAlignment="Left" Margin="561,558,0,0" VerticalAlignment="Top" Width="75" Click="CloseBtn_Click"/>
+        <Label Content="Total:" HorizontalAlignment="Left" Margin="14,322,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="ValorTotalLbl" Content="" HorizontalAlignment="Left" Margin="14,346,0,0" VerticalAlignment="Top"/>
+
+
         <!--<DataGrid x:Name="dg1" HorizontalAlignment="Left" Margin="393,10,0,0" VerticalAlignment="Top" Height="326" Width="331">
             <DataGrid.ContextMenu>
                 <ContextMenu BorderBrush="Black" BorderThickness="1">
