--- a/AppBarMenu/AppBarMenu/MainWindow.xaml
+++ b/AppBarMenu/AppBarMenu/MainWindow.xaml
@@ -45,6 +45,12 @@
               </MenuItem.Icon>
               <MenuItem.Header>Renomear</MenuItem.Header>
             </MenuItem>
+            <MenuItem x:Name="BtnChangeImageFile" Click="ItemControlChangeImageFile_Click">
+              <MenuItem.Icon >
+                <Image Source="open_icon.png" />
+              </MenuItem.Icon>
+              <MenuItem.Header>Mudar Imagem</MenuItem.Header>
+            </MenuItem>
             <MenuItem x:Name="BtnOpenFileItem" Click="ItemControlOpenFile_Click">
               <MenuItem.Icon >
                 <Image Source="open_file.png" />
@@ -72,8 +78,8 @@
           </ContextMenu>
         </ListBox.ContextMenu>
       </ListBox>
-      <Button x:Name="BtnAdd" Content="Adicionar" VerticalAlignment="Top" Width="101" Click="BtnAdd_Click" Margin="10,452,0,0" Height="40" HorizontalAlignment="Left" Background="#FF3A42B7" Cursor="Hand" BorderBrush="{x:Null}"/>
-      <Button x:Name="CloseBtn" Content="Sair" HorizontalAlignment="Left" Margin="561,558,0,0" VerticalAlignment="Top" Width="75" Click="CloseBtn_Click" Background="#FF3A42B7" Cursor="Hand" BorderBrush="{x:Null}"/>
+      <Button x:Name="BtnAdd" Content="Adicionar" VerticalAlignment="Top" Width="101" Click="BtnAdd_Click" Margin="10,452,0,0" Height="40" HorizontalAlignment="Left" Background="White" Cursor="Hand" BorderBrush="{x:Null}" Foreground="#DD003FFF"/>
+      <Button x:Name="CloseBtn" Content="Sair" HorizontalAlignment="Left" Margin="561,558,0,0" VerticalAlignment="Top" Width="75" Click="CloseBtn_Click" Background="#DDFFFFFF" Cursor="Hand" BorderBrush="{x:Null}" Foreground="#DD003FFF"/>
       <Label x:Name="ValorTotalLbl" Content="" HorizontalAlignment="Left" Margin="10,421,0,0" VerticalAlignment="Top" Width="8"/>
 
 
