Escopo meio caminho andado de grupo

--- a/AppBarMenu/AppBarMenu/CustomImageDialog.xaml
+++ b/AppBarMenu/AppBarMenu/CustomImageDialog.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
         WindowStyle="ToolWindow"
-        Title="CustomImageDialog" Height="221" Width="177">
+        Title="Selecione uma imagem" Height="221" Width="177">
   <Grid>
 
     <Image Source="/details_icon.png" x:Name="ImagePreview"  Height="109" Margin="0,10,0,0" VerticalAlignment="Top" HorizontalAlignment="Center" Width="111" MouseUp="ImagePreview_MouseUp"/>
